# stateful-dataflow-demos

./: .gitignore  Cargo.toml  ISSUES.md  README.md  events.json
_bk/: bytes_to_event.rs  convert.rs  dataflow.yaml
_bk/v1/: filter_rules.rs  jaq_transform.rs  sdf-package.yaml
stripe-clean/: README.md  dataflow.yaml
stripe-reduce/: README.md  dataflow.yaml
stripe-reduce/sample-data/: events.json
stripe-slack/: README.md  dataflow.yaml
stripe-to-slack/: README.md  slack-connector.yaml  stripe-webhook.yaml
stripe-to-slack/stripe-reduce/: README.md  dataflow.yaml
stripe-to-slack/stripe-reduce/sample-data/: events-not-handled.json  events.json  invoice-created.json
stripe-to-slack/stripe-slack/: README.md  dataflow.yaml
stripe-to-slack/stripe-slack/sample-data/: invoice-created.json
test-dataflow/: dataflow.yaml
use-cases/stripe-slack/: slack-billing-connector.yaml  stripe-transforms.yaml  stripe-webhook.yaml
