[workspace]
members = [
    "packages/slack-types/rust/slack-types",
    "packages/stripe-types/rust/stripe-types",
    "packages/jaq/rust/jaq",
    "packages/stripe-slack/rust/stripe-slack"
]

resolver = "2"

[profile.wasm-release]
inherits = "release"
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-debug]
inherits = "dev"
overflow-checks = false
strip = true
opt-level = 's'
panic = "abort"